<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.medisolv.ReportsOrScansActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/my_toolbarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_3"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportsScans"
        android:id="@+id/reportsScans"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginLeft="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patiendId"
        android:id="@+id/reportPatientId"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:layout_below="@+id/reportsScans"
        android:layout_alignLeft="@+id/reportsScans"
        android:layout_alignStart="@+id/reportsScans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Id from DB "
        android:id="@+id/reportPatientIdValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:layout_alignTop="@+id/reportPatientId"
        android:layout_toRightOf="@+id/reportPatientId"
        android:layout_toEndOf="@+id/reportPatientId"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/reportHomeButton"
        android:layout_marginLeft="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <Button
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:id="@+id/firstButton"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_alignTop="@+id/reportHomeButton"
        android:layout_toRightOf="@+id/reportHomeButton"
        android:layout_toEndOf="@+id/reportHomeButton"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:layout_alignTop="@+id/firstButton"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <Button
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:id="@+id/lastButton"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_alignTop="@+id/nextButton"
        android:layout_toRightOf="@+id/nextButton"
        android:layout_toEndOf="@+id/nextButton"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/reportBackButton"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_alignTop="@+id/lastButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/report1"
        android:id="@+id/report1"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/reportPatientId"
        android:layout_toLeftOf="@+id/viewButton1"
        android:layout_toStartOf="@+id/viewButton1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/viewButton1"
        android:layout_alignTop="@+id/report1"
        android:layout_toLeftOf="@+id/shareButton1"
        android:layout_toStartOf="@+id/shareButton1"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:id="@+id/shareButton1"
        android:layout_alignTop="@+id/viewButton1"
        android:layout_toRightOf="@+id/lastButton"
        android:layout_toEndOf="@+id/lastButton"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/report2"
        android:id="@+id/report2"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/report1"
        android:layout_toLeftOf="@+id/viewButton2"
        android:layout_toStartOf="@+id/viewButton2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/viewButton2"
        android:layout_alignTop="@+id/report2"
        android:layout_toLeftOf="@+id/shareButton2"
        android:layout_toStartOf="@+id/shareButton2"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:id="@+id/shareButton2"
        android:layout_alignTop="@+id/viewButton2"
        android:layout_toRightOf="@+id/lastButton"
        android:layout_toEndOf="@+id/lastButton"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/report3"
        android:id="@+id/report3"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/report2"
        android:layout_toLeftOf="@+id/viewButton3"
        android:layout_toStartOf="@+id/viewButton3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/viewButton3"
        android:layout_alignTop="@+id/report3"
        android:layout_toLeftOf="@+id/shareButton3"
        android:layout_toStartOf="@+id/shareButton3"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:id="@+id/shareButton3"
        android:layout_alignTop="@+id/viewButton3"
        android:layout_toRightOf="@+id/lastButton"
        android:layout_toEndOf="@+id/lastButton"
        android:textAllCaps="false"/>


</RelativeLayout>
