<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.medisolv.BuyMedicinesActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/my_toolbarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_3"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyMedicines"
        android:id="@+id/buyMedicines"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginLeft="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patiendId"
        android:id="@+id/buyMedicinesPatientId"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:layout_below="@+id/buyMedicines"
        android:layout_alignLeft="@+id/buyMedicines"
        android:layout_alignStart="@+id/buyMedicines" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Id from DB "
        android:id="@+id/buyMedicinesPatientIdValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:layout_above="@+id/vendor1Button"
        android:layout_toRightOf="@+id/buyMedicinesPatientId"
        android:layout_toEndOf="@+id/buyMedicinesPatientId"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/vendor1"
        android:id="@+id/vendor1Button"
        android:layout_below="@+id/buyMedicinesPatientId"
        android:layout_alignLeft="@+id/buyMedicinesPatientId"
        android:layout_alignStart="@+id/buyMedicinesPatientId"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/vendor2"
        android:id="@+id/vendor2Button"
        android:layout_below="@+id/vendor1Button"
        android:layout_alignLeft="@+id/vendor1Button"
        android:layout_alignStart="@+id/vendor1Button"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/vendor3"
        android:id="@+id/vendor3Button"
        android:layout_below="@+id/vendor2Button"
        android:layout_alignLeft="@+id/vendor2Button"
        android:layout_alignStart="@+id/vendor2Button"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/buyMedicinesHomeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/vendor3Button"
        android:layout_alignStart="@+id/vendor3Button"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buyMedicinesBackButton"
        android:layout_alignTop="@+id/buyMedicinesHomeButton"
        android:layout_toRightOf="@+id/buyMedicinesHomeButton"
        android:layout_toEndOf="@+id/buyMedicinesHomeButton"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"/>


</RelativeLayout>
