<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.medisolv.DependentsDetailActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/my_toolbarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_3"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dependentDetail"
        android:id="@+id/dependentDetail"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginLeft="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patiendId"
        android:id="@+id/dependentDetailPatientId"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="15dp"
        android:layout_below="@+id/dependentDetail"
        android:layout_alignLeft="@+id/dependentDetail"
        android:layout_alignStart="@+id/dependentDetail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Id from DB "
        android:id="@+id/dependentDetailPatientIdValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:layout_above="@+id/dependentDetailPrescriptionHistoryButton"
        android:layout_toRightOf="@+id/dependentDetailPatientId"
        android:layout_toEndOf="@+id/dependentDetailPatientId" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dependentDetailPrescriptionHistory"
        android:id="@+id/dependentDetailPrescriptionHistoryButton"
        android:layout_below="@+id/dependentDetailPatientId"
        android:layout_alignLeft="@+id/dependentDetailPatientId"
        android:layout_alignStart="@+id/dependentDetailPatientId"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dependentDetailScansOrReports"
        android:id="@+id/dependentDetailReportsOrScansButton"
        android:layout_below="@+id/dependentDetailPrescriptionHistoryButton"
        android:layout_alignLeft="@+id/dependentDetailPrescriptionHistoryButton"
        android:layout_alignStart="@+id/dependentDetailPrescriptionHistoryButton"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dependentDetailDoctor"
        android:id="@+id/dependentDetailDoctorButton"
        android:layout_below="@+id/dependentDetailReportsOrScansButton"
        android:layout_alignLeft="@+id/dependentDetailReportsOrScansButton"
        android:layout_alignStart="@+id/dependentDetailReportsOrScansButton"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/dependentDetailHomeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/dependentDetailDoctorButton"
        android:layout_alignStart="@+id/dependentDetailDoctorButton"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/dependentDetailBackButton"
        android:layout_alignTop="@+id/dependentDetailHomeButton"
        android:layout_toRightOf="@+id/dependentDetailHomeButton"
        android:layout_toEndOf="@+id/dependentDetailHomeButton"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dependentDetailComments"
        android:id="@+id/dependentDetailCommentsButton"
        android:layout_below="@+id/dependentDetailDoctorButton"
        android:layout_alignLeft="@+id/dependentDetailDoctorButton"
        android:layout_alignStart="@+id/dependentDetailDoctorButton"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>
</RelativeLayout>
