<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.medisolv.MainActivity"
    android:orientation="horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp">

       <!-- <TextView
            android:id="@+id/my_toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:theme="@style/TitleTheme"/>-->
        <ImageView
            android:id="@+id/my_toolbarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_3"/>
    </android.support.v7.widget.Toolbar>



    <TableRow
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp">

        <Button
            android:id="@+id/login"
            android:text="@string/login"
             android:textAllCaps="false"
            android:onClick="openLoginPage" />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/regUser"
            android:text="@string/regUser"
            android:textSize="12dp"
            android:textColor="#000000"/>

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="openRegistrationPage"/>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/newUser"
        android:textSize="12dp"
        android:textColor="#000000"
       />
    </TableRow>
</TableLayout>
